--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">MainActivity</string>
     <string name="btn_home_compute">Faire un calcul</string>
+    <string name="egal">=</string>
     <string name="first_operand">first_operand</string>
     <string name="second_operand">second_operand</string>
-    <string name="btn_compute">btn_compute</string>
-    <string name="btn_call">S.O.S</string>
+    <string name="btn_call">S.O.S.</string>
+    <string name="btn_search">Research</string>
 </resources>
