Tâche 4: Partager un message sur les réseaux sociaux, par mail ou par SMS

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="second_operand">second_operand</string>
     <string name="btn_call">S.O.S.</string>
     <string name="btn_search">Research</string>
+    <string name="btn_partagervia">Share via</string>
 </resources>
