--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="btn_call">S.O.S.</string>
     <string name="btn_search">Research</string>
     <string name="btn_partagervia">Share via</string>
+    <string name="btn_locaction">show Location</string>
 </resources>
